--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,6 +3,6 @@ contact_links:
   - name: IMS Home Page
     url: https://ims.esapps.in/about/
     about: Online Stock and Inventory Management Software
-  - name: IMS Knowledgebase
-    url: https://github.com/Erratums/ims-support/discussions
+  - name: IMS Web App
+    url: https://ims.esapps.in
     about: Please ask and answer questions here
